compiler/weave_syntax/tests/data/syntax/IncompleteNamespace6.error
error: unexpected token '}', expected '{'
        --> <source>:1:13
         |
       1 | namespace Y }
         |             ^
